# iqr_scout_robot

./: README.md
iqr_scout_bringup/: CMakeLists.txt  package.xml
iqr_scout_bringup/launch/: iqr_bringup.launch
iqr_scout_bringup/launch/include/: kinect_dk.launch.xml
iqr_scout_bringup/rules/: 99-iqr-scout.rules
iqr_scout_description/: CMakeLists.txt  package.xml
iqr_scout_description/launch/: view_model.launch
iqr_scout_description/rviz/: view_model.rviz  view_robot.rviz
iqr_scout_description/urdf/: arm_support.xacro  aubo_i5.xacro  gps_antenna.xacro  iqr_scout_robot.urdf.xacro  kinect_dk.xacro  realsense_support.xacro  sensor_support.xacro  vlp16.xacro
iqr_scout_description/urdf/mesh/: arm_support.stl  gps_antenna.stl  gps_antenna_support.stl  sensor_support_collision.stl
iqr_scout_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
iqr_scout_moveit_config/config/: fake_controllers.yaml  iqr_scout_robot.srdf  ros_controllers.yaml  sensors_3d.yaml
iqr_scout_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  excute.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  iqr_scout_robot_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
